                        GPSD project news

3.23.1~dev: unreleased
  Improve ubx cycle detection.
  Add quirks for Jackson Labs nonstandard NMEA

3.23: 2020-08-06
  doc/*xml all moved into www/internals.adoc
  Convert all DocBook (.xml) to AsciiDoctor (.adoc)
  Remove all XSL remnants.
  gpsplot: speedup, add new options.
  driver_ubx.c: Add decode for UBX-NAV-STATUS
  gps/ubx.py: Improve decode for UBX-NAV-STATUS
  cgps: Add popup help, interactive options.
  Reorganize and split the man pages.
  Small updates for u-blox M8 and M10
  Deprecated mtk3331 and ashtech build options.  Use nmea0183 instead.
  gpssnmp: Move from contrib/ to clients, add manpage
  Add www/gpsd-client-example-code.adoc
  Add gpsdebuginfo script and man page.
  ubxtool: Add BeiDou, Galileo, GLONASS, QZSS, and partial SBAS subframe decodes
  Max serial port speed raised to 921,600.
  SUBFRAME JSON now includes new fields to support multiple constellations.
  gpsd: Add some ADR and UDR message partial decodes.
  ubxtool: Add some ADR and UDR message polls and decodes.
  Remove COMPASS_ENABLE.  Always compile attitude code.
  contrib/webgps.py: use argparse, arguments -V, --version, --no-html-head.
  Add readonly flag to DEVICE JSON.
  Control messages to gpsd now return JSON, instead of, sometimes, OK or ERROR.
  gpsfake uses "# Date: yyyy-mm-dd" to set initial time.
  Don't compute wrong GPS rollover after 2021-10-23.
  Bump libgps to version 29.

3.22: 2021-01-08
  Added client/gpscsv to convert gpsd JSON to csv.
  Added client/gpsplot to dynamically plot gpsd JSON.
  Added client/gpssubframe to decode gpsd SUBFRAME JSON.
  Added nSat and uSat to SKY JSON.  Old clients can not read new SKY.
  Move stuff from source root into clients/, include/, gpsmon/ and libgps/.
  Move stuff from source root into gpsd/.
  Move class ubx out of ubxtool and into gps/ubx.py.
  Build all targets in gpsd-$VERSION/, not in tree.
  NMEA 4.11 support for $GI (IRNSS) and $GZ (QZSS).

3.21: 2020-08-04