@@ -318,7 +318,7 @@ static void handle1005(struct gps_device_t *session UNUSED)
     int numcorrections = (int)getzword(12);
 
     if (session->newdata.mode == MODE_NO_FIX)
-        session->newdata.status = STATUS_NO_FIX;
+        session->newdata.status = STATUS_UNK;
     else if (numcorrections == 0)
         session->newdata.status = STATUS_FIX;
     else
