@@ -105,7 +105,7 @@ static int json_tpv_read(const char *buf, struct gps_data_t *gpsdata,
         {"sep",    t_real,    .addr.real = &gpsdata->fix.sep,
                                  .dflt.real = NAN},
         {"status", t_integer, .addr.integer = &gpsdata->fix.status,
-                                 .dflt.integer = STATUS_NO_FIX},
+                                 .dflt.integer = STATUS_UNK},
         {"relN", t_real,  .addr.real = &gpsdata->fix.NED.relPosN,
                                  .dflt.real = NAN},
         {"relE", t_real,  .addr.real = &gpsdata->fix.NED.relPosE,
